# sdevent-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  using-sdevent-cpp.md
include/sdevent-cpp/: defer.hpp  sdevent.hpp  source.hpp
pkgconfig/: sdevent-cpp.pc.in
src/: defer.cpp  sdevent.cpp  source.cpp
tests/: CMakeLists.txt
tests/integrationtests/: fixture_sdevent.cpp  fixture_sdevent.hpp  test_sdevent.cpp
